intitial base of this website, will work later:)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </select>
         <div class="grid"id = "CryptoPrices"></div>
     </div>
+    <script src = 'config.js'></script>
     <script src= "script.js"></script>
 </body>
 
